syntax = "proto3";

option csharp_namespace = "Protos.Services";

package user;

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message Empty {}

message UserList {
  repeated User users = 1;
}

service UserService {
  rpc GetAllUsers(Empty) returns (UserList);
}